# color-based-object-identifier

./: CD.cpp  readme.txt
source/: CMakeLists.txt  README.md  app  main.cpp
source/include/: object.h
source/src/: object.cpp
